@@ -1,4 +1,7 @@
 0.0.3
+Closing last tab reopens tab at ~.
+Added close button to tab.
+Tab label is now set to folder name.
 'New' now opens new tab in same directory as active tab.
 
 0.0.2
